--- a/index.html
+++ b/index.html
@@ -482,7 +482,10 @@
 
             Object.entries(etapasConfig).forEach(([etapa, config]) => {
                 let item = document.createElement("li");
-                item.textContent = `${etapa}. ${config.processo}`;
+                // item.textContent = `${etapa}. ${config.processo}`;
+
+                item.innerHTML =
+                `<span style="background-color: ${parseInt(etapa) <= etapaAtual ? 'rgb(15, 173, 86)' : 'transparent'}; color: ${parseInt(etapa) <= etapaAtual ? 'white' : 'black'}">${etapa}</span> ${config.processo}`;
 
                 // Destaca a etapa atual
                 if (parseInt(etapa) === etapaAtual) {
