--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Editor de JSON Dinâmico</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@json-editor/json-editor@latest/dist/jsoneditor.min.js"></script>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/styles/index.css">
 </head>
 <body>
 
@@ -21,7 +21,7 @@
             <div class="form">
                 <div id="editor"></div>
                 <div id="bloco-explicacao" class="bloco-explicacao" style="display: none;"></div>
-                <h2 class="mt-4">JSON Salvo</h2>
+                <!-- <h2 class="mt-4">JSON Salvo</h2> -->
                 <pre id="output"></pre>
                 <button class="btn btn-success mt-3" onclick="mudarEtapa(-1)">Etapa Anterior</button>
                 <button class="btn btn-primary mt-3" onclick="mudarEtapa(1)">Próxima Etapa</button>
@@ -589,7 +589,7 @@
         }
 
         // Exibir os dados ao carregar a página
-        document.getElementById("output").textContent = JSON.stringify(database, null, 4);
+        // document.getElementById("output").textContent = JSON.stringify(database, null, 4);
 
         setTimeout(() => {
             atualizarFluxo();
