refactor/font-menu-size

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         const editor = new JSONEditor(document.getElementById("editor"), {
             schema: {
                 "type": "object",
-                "title":"Formulario para preencher",
+                "title":"Objetivos de aprendizagem",
                 "properties": {
                     "unidadeCurricular": {
                         "type": "string",
