--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             12: {
                 campos: [],
                 //textoExplicativo: "<p>Prompt para IA: [tema] e [enredo]</p>",
-                textoExplicativo: "<p>Crie um RPG educacional focado na aprendizagem de [funcoesCognitivasCriar], no contexto de [conteudo]. O jogo deve estimular o desenvolvimento das habilidades sociais [habilidadesSociais]. O RPG utilizará o tema [tema] e apresentará uma atmosfera [ambientacaoAtmosfera]. O cenário principal será [ambientacaoCenario], com espaços jogáveis em [ambientacaoEspaco]. Os jogadores controlarão [personagens] personagens, que enfrentarão desafios relacionados a [enredo.problemas]. Para avançar, precisarão superar [enredo.desafios], explorando possíveis [enredo.solucao]. Cada protagonista terá [habilidadesTecnicas] e [habilidadesSociais] específicas. Além disso, defina parâmetros de caracterização dos personagens e estabeleça regras de aleatoriedade para eventos e desafios do jogo.</p><p>Por favor, acesse <a href='https://chatgpt.com/' target='_blank'>https://chatgpt.com/</a> e cole este prompt para gerar a narrativa do RPG!</p>",
+                textoExplicativo: "<p>Crie um RPG educacional focado na aprendizagem de [funcoesCognitivasCriar], no contexto de [conteúdo]. O jogo deve estimular o desenvolvimento das habilidades sociais [habilidadesSociais]. O RPG utilizará o tema [tema] e apresentará uma atmosfera [ambientacaoAtmosfera]. O cenário principal será [ambientacaoCenario], com espaços jogáveis em [ambientacaoEspaco]. Os jogadores controlarão [personagens] personagens, que enfrentarão desafios relacionados a [enredo.problemas]. Para avançar, precisarão superar [enredo.desafios], explorando possíveis [enredo.solucao]. Cada protagonista terá [habilidadesTecnicas] e [habilidadesSociais] específicas. Além disso, defina parâmetros de caracterização dos personagens e estabeleça regras de aleatoriedade para eventos e desafios do jogo.</p><p>Por favor, acesse <a href='https://chatgpt.com/' target='_blank'>https://chatgpt.com/</a> e cole este prompt para gerar a narrativa do RPG!</p>",
                 processo: "Narrativa",
                 exibirBlocoExplicacao: false
             },
@@ -175,7 +175,7 @@
                     },
                     "anoPeriodo": {
                         "type": "string",
-                        "title": "Ano/Periodo",
+                        "title": "Ano/Período",
                         "description": "Ano e período letivo"
                     },
                     "conteudo": {
@@ -185,7 +185,7 @@
                     },
                     "conteudoInterdisciplinar": {
                         "type": "string",
-                        "title": "Conteúd Interdisciplinar",
+                        "title": "Conteúdo Interdisciplinar",
                         "description": "Incluir um ou mais conteúdos da unidade curricular que deseja trabalhar no jogo."
                     },
                     "habilidadesSociais": {
@@ -203,11 +203,11 @@
                     },
                     "habilidadesTecnicas": {
                         "type": "array",
-                        "title": "Habilidades Tecnicas",
+                        "title": "Habilidades Técnicas",
                         "items": {
                             "type": "string",
-                            "title": "Habilidade Tecnicas",
-                            "description": "Habilidades Tecnicas a serem desenvolvidas",
+                            "title": "Habilidade Técnicas",
+                            "description": "Habilidades Técnicas a serem desenvolvidas",
                             "ui": {
                                 "widget": "select"
                             }
