--- a/index.html
+++ b/index.html
@@ -8,22 +8,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@json-editor/json-editor@latest/dist/jsoneditor.min.js"></script>    
     <link rel="stylesheet" href="./styles/index.css">
-    <style>
-        .logo {
-            display: block;
-            margin: 5px auto;
-            max-width: 150px;
-            height: auto;
-        }
-    </style>
 </head>
-
 <body>
-
     <!-- <div class="container"> -->
     <div id="header">
-        <img src="https://i.imgur.com/vdxGNAx.png" alt="Logo CreativEduc" class="logo">
-        <h1></h1>
+        <img src="./images/Lg-CREATIVeduc-horizontal.png" alt="Logo CreativEduc" class="logo">
     </div>
     <div class="flex">
         <ul id="lista-processos-mobile"></ul>
