--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             12: {
                 campos: [],                
                 textoExplicativo: "<div class='dsc-container'>  <h1 class='dsc-main-title'>Escada semiotica</h1>  <p class='dsc-content-text'>Texto para colocar</p>  <div class='dsc-image-wrapper'>   <img class='dsc-content-image' src='https://i.imgur.com/00BsA8k.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div>  <div class='dsc-image-wrapper'>    <img class='dsc-content-image' src='https://i.imgur.com/FpTZ2ky.png' alt='...'>    <h3 class='dsc-image-caption'>Título da imagem</h3>  </div></div>",
-                processo: "NOVA PAGINA SEM NOME",
+                processo: "DSC - Escada Semiotica",
                 exibirBlocoExplicacao: false
             },
             13: {
