--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         "items": {
                             "type": "string",
                             "title": "Habilidade Social",
-                            "enum": ["Capacidade de entender e solucionar problemas", "Questões sociais e culturais por meio de análise de contexto de forma não técnica", "Análise do impacto nas mudanças sociais ocasionadas pela tecnologia", "Resolução de conflitos", "Visão sistêmica", "Consciência crítica e aguçada"],
+                            "enum": ["Capacidade de entender e solucionar problemas", "Ética e Responsabilidade", "Questões sociais e culturais por meio de análise de contexto de forma não técnica", "Análise do impacto nas mudanças sociais ocasionadas pela tecnologia", "Resolução de conflitos", "Visão sistêmica", "Consciência crítica e aguçada"],
                             "ui": {
                                 "widget": "select"
                             }
